[package]
    name = "sqlayout"
    version = "0.1.5"
    edition = "2021"
    authors = ["Xtrem532"]
    license = "LGPL-2.1-only"
    description = "Generates SQL-code for creating SQLite databases via API or XML config"
    readme = "readme.md"
    keywords = ["SQL", "SQLite", "Databse", "Schema"]
    categories = ["database", "config"]
    exclude = ["*.xml", "/.idea"]
    repository = "https://github.com/Xtrem532/sqlayout"

[features]
    xml-config = ["dep:quick-xml", "dep:serde"]
    rusqlite = ["dep:rusqlite"]

[dependencies]
    thiserror = "1"
    quick-xml = { version = "0.30", features = ["serialize"], optional = true}
    serde = { version = "1", features = ["derive"], optional = true}
    rusqlite = { version = "0.29", features = ["bundled"], optional = true}

[dev-dependencies]
    anyhow = "1"

[lib]
    path = "src/lib.rs"
    crate-type = ["rlib"]