[package]
    name = "sqlayout"
    version = "0.2.0"  # cargo public-api -sss diff latest
    edition = "2021"
    authors = ["Xtrem532"]
    license = "LGPL-2.1-only"
    description = "Generates SQL-code for creating SQLite databases via Builder API or XML config"
    readme = "readme.md"
    keywords = ["SQL", "SQLite", "Database", "Schema"]
    categories = ["database", "config"]
    exclude = ["*.xml", "/.idea"]
    repository = "https://github.com/Xtrem532/sqlayout"

[features]
    xml-config = ["dep:quick-xml", "dep:serde"]
    rusqlite = ["dep:rusqlite"]

[dependencies]
    thiserror = "2.0.11"
    quick-xml = { version = "0.37.2", features = ["serialize"], optional = true}
    serde = { version = "1.0.217", features = ["derive"], optional = true}
    rusqlite = { version = "0.33.0", features = ["bundled"], optional = true}

[dev-dependencies]
    anyhow = "1.0.95"

[lib]
    path = "src/lib.rs"
    crate-type = ["rlib"]